--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">&#9776;</div>
-    <div class="w3-right w3-padding-16">Mail</div>
+    <div class="w3-right w3-padding-16">&nbsp&nbsp&nbsp&nbsp&nbsp</div>
     <div class="w3-center w3-padding-16">Ensina Fácil</div>
   </div>
 </div>
@@ -34,39 +34,32 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
-      <a href="google.com"><img src="w3images/sandwich.jpg" alt="Sandwich" style="width:100%"></a>
-      <h3>The Perfect Sandwich, A Real NYC Classic</h3>
-      <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <a href="#"><img src="w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
+      <h3>Alimentos</h3></a>
     </div>
     <div class="w3-quarter">
-      <img src="w3images/steak.jpg" alt="Steak" style="width:100%">
-      <h3>Let Me Tell You About This Steak</h3>
-      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <a href="#"><img src="w3images/pets.jpg" alt="Steak" style="width:100%">
+      <h3>Animais de Estimação</h3></a>
     </div>
     <div class="w3-quarter">
-      <img src="w3images/cherries.jpg" alt="Cherries" style="width:100%">
-      <h3>Cherries, interrupted</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-      <p>What else?</p>
+      <a href="#"><img src="w3images/cherries.jpg" alt="Cherries" style="width:100%">
+      <h3>Dias da Semana</h3></a>
     </div>
     <div class="w3-quarter">
-      <img src="w3images/wine.jpg" alt="Pasta and Wine" style="width:100%">
-      <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <a href="#"><img src="w3images/Clima.jpg" alt="Pasta and Wine" style="width:100%">
+      <h3>Clima</h3></a>
     </div>
   </div>
   
   <!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
-      <img src="w3images/popsicle.jpg" alt="Popsicle" style="width:100%">
-      <h3>All I Need Is a Popsicle</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <a href="#"><img src="w3images/popsicle.jpg" alt="Popsicle" style="width:100%">
+      <h3>Saudações</h3></a>
     </div>
     <div class="w3-quarter">
-      <img src="w3images/salmon.jpg" alt="Salmon" style="width:100%">
-      <h3>Salmon For Your Skin</h3>
-      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <a href="#"><img src="w3images/salmon.jpg" alt="Salmon" style="width:100%">
+      <h3>Números</h3>
     </div>
     <div class="w3-quarter">
       <img src="w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
