--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Ensina Fácil 2.0</title>
+<title>Ensina Fácil</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -14,16 +14,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <!-- Sidebar (hidden by default) -->
 <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()"
-  class="w3-bar-item w3-button">Close Menu</a>
-  <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button">Food</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
+  class="w3-bar-item w3-button">Fechar Menu</a>
+  <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Exercícios</a>
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">Sobre</a>
 </nav>
 
 <!-- Top menu -->
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">&#9776;</div>
-    <div class="w3-right w3-padding-16">Mail</div>
+    <div class="w3-right w3-padding-16">&nbsp&nbsp&nbsp&nbsp&nbsp</div>
     <div class="w3-center w3-padding-16">Ensina Fácil</div>
   </div>
 </div>
@@ -34,50 +34,34 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
-      <img src="w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
-      <h3>Alimentos</h3>
-      <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <a href="Alimentos.html"><img src="w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
+      <h3>Alimentos</h3></a>
     </div>
     <div class="w3-quarter">
-      <img src="w3images/steak.jpg" alt="Steak" style="width:100%">
-      <h3>Animais de Estimação</h3>
-      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <a href="#"><img src="w3images/pets.jpg" alt="Steak" style="width:100%">
+      <h3>Animais de Estimação</h3></a>
     </div>
     <div class="w3-quarter">
-      <img src="w3images/cherries.jpg" alt="Cherries" style="width:100%">
-      <h3>Dias da Semana</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-      <p>What else?</p>
+      <a href="#"><img src="w3images/Calendario.jpg" alt="Cherries" style="width:100%">
+      <h3>Dias da Semana</h3></a>
     </div>
     <div class="w3-quarter">
-      <img src="w3images/wine.jpg" alt="Pasta and Wine" style="width:100%">
-      <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <a href="#"><img src="w3images/Clima.jpg" alt="Pasta and Wine" style="width:100%">
+      <h3>Clima</h3></a>
     </div>
   </div>
   
   <!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
-      <img src="w3images/popsicle.jpg" alt="Popsicle" style="width:100%">
-      <h3>All I Need Is a Popsicle</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <a href="#"><img src="w3images/Saudacoes.jpg" alt="Popsicle" style="width:100%">
+      <h3>Saudações</h3></a>
     </div>
     <div class="w3-quarter">
-      <img src="w3images/salmon.jpg" alt="Salmon" style="width:100%">
-      <h3>Salmon For Your Skin</h3>
-      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <a href="#"><img src="w3images/Numeros.jpg" alt="Salmon" style="width:100%">
+      <h3>Números</h3>
     </div>
-    <div class="w3-quarter">
-      <img src="w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
-      <h3>The Perfect Sandwich, A Real Classic</h3>
-      <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-    <div class="w3-quarter">
-      <img src="w3images/croissant.jpg" alt="Croissant" style="width:100%">
-      <h3>Le French</h3>
-      <p>Lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
+
   </div>
 
   <!-- Pagination -->
